objects/LLC_BI__Ownership_Structure_Type__c.object
<CustomObject>
    <fields>
        <fullName>CSIDDP__CSI_Mapping_Code__c</fullName>
        <description>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</description>
        <inlineHelpText>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</inlineHelpText>
        <label>CSi Mapping Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Mapping_Code__c</fullName>
        <description>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</description>
        <inlineHelpText>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</inlineHelpText>
        <label>CSi Mapping Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required and manually entered during the configuration of Ownership Structure Types, which are used during the New Deposit Workflow. This field indicates a category that relates to a type of legal entity.</description>
        <inlineHelpText>Type of account this ownership type relates to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__CSI_Mapping_Code__c</fullName>
        <description>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</description>
        <inlineHelpText>This field is required in order to use the CSi DocPrep integration. It is used to store the mapping code relating Ownership Types in nCino to CSi.</inlineHelpText>
        <label>CSi Mapping Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WKDDP__Description__c</fullName>
        <description>Administrators populate this optional text field with a description of the other rights at death option.</description>
        <inlineHelpText>Enter a description of the other rights at death option.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ownership Structure Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Ownership Structure Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership Structure Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>